--- a/project-two/package.json
+++ b/project-two/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "express-generator": "^4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.13.2",
     "morgan": "~1.9.1"
   }
 }
